--- a/sp.html
+++ b/sp.html
@@ -49,7 +49,7 @@
   </div>
   <script>
     const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwpOVZ_qNP9y2Rk5_Jl2xdsLjZVZ2QmEL9bThHLESaMjD9aXMMXvybpCf2qNcARnFQDUA/exec";
-    const N8N_WEBHOOK_URL = "https://856d-61-7-138-3.ngrok-free.app/webhook-test/PJF_MN";
+    const N8N_WEBHOOK_URL = "https://856d-61-7-138-3.ngrok-free.app/webhook/PJF_MN";
     const loadingDiv = document.getElementById('loading');
     const errorDiv = document.getElementById('error');
     const repairForm = document.getElementById('repairForm');
