--- a/index.html
+++ b/index.html
@@ -47,10 +47,31 @@
         }
     </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+<body class="bg-gray-100">
 
-    <div class="w-full max-w-2xl mx-auto p-4">
-        <form id="repairForm" class="bg-white p-8 rounded-xl shadow-lg space-y-6">
+    <!-- Navigation Menu (Dropdown) -->
+    <div class="absolute top-4 left-4 z-20">
+        <div class="relative inline-block text-left">
+            <div>
+                <button type="button" id="menu-button" class="inline-flex items-center justify-center w-full rounded-md border border-gray-300 bg-white px-3 py-2 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-gray-100" aria-expanded="true" aria-haspopup="true">
+                    <!-- Hamburger Icon -->
+                    <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                    </svg>
+                </button>
+            </div>
+            <div id="dropdown-menu" class="hidden absolute left-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
+                <div class="py-1" role="none">
+                    <a href="index.html" class="block px-4 py-2 text-sm font-bold bg-indigo-50 text-indigo-700" role="menuitem" tabindex="-1" id="menu-item-0">แจ้งซ่อม</a>
+                    <a href="page2.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" tabindex="-1" id="menu-item-1">รับเรื่องแจ้งซ่อม</a>
+                    <a href="page3.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" tabindex="-1" id="menu-item-2">ปิดงานแจ้งซ่อม</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="w-full max-w-2xl mx-auto p-4 flex items-center justify-center min-h-screen">
+        <form id="repairForm" class="bg-white p-8 rounded-xl shadow-lg space-y-6 w-full">
             <h1 class="text-2xl font-bold text-center text-gray-800">ฟอร์มแจ้งซ่อมอุปกรณ์</h1>
 
             <!-- Row 1: Repair ID and Category -->
@@ -258,7 +279,7 @@
             event.preventDefault();
 
             const submitButton = document.getElementById('submitButton');
-            const webhookUrl = 'https://856d-61-7-138-3.ngrok-free.app/webhook/PJF_MN';
+            const webhookUrl = 'https://856d-61-7-138-3.ngrok-free.app/webhook-test/PJF_MN';
             
             submitButton.disabled = true;
             submitButton.textContent = 'กำลังส่งข้อมูล...';
@@ -352,6 +373,21 @@
             initializeForm();
             setupAutocomplete(document.getElementById("machine_id_input"), machineList);
             setupAutocomplete(document.getElementById("department_input"), departmentList);
+
+            // --- Dropdown Menu Logic ---
+            const menuButton = document.getElementById('menu-button');
+            const dropdownMenu = document.getElementById('dropdown-menu');
+
+            menuButton.addEventListener('click', () => {
+                dropdownMenu.classList.toggle('hidden');
+            });
+
+            // Close dropdown if clicked outside
+            window.addEventListener('click', function(e) {
+                if (!menuButton.contains(e.target) && !dropdownMenu.contains(e.target)) {
+                    dropdownMenu.classList.add('hidden');
+                }
+            });
         });
 
     </script>
