--- a/page2.html
+++ b/page2.html
@@ -15,6 +15,32 @@
   </style>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen py-8 sm:py-12 px-4 sm:px-6 lg:px-8">
+      <!-- =================== 1. HTML ของเมนู (คัดลอกส่วนนี้) =================== -->
+    <div class="absolute top-4 left-4 z-20">
+        <div class="relative inline-block text-left">
+            <div>
+                <button type="button" id="menu-button" class="inline-flex items-center justify-center w-full rounded-md border border-gray-300 bg-white px-3 py-2 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-gray-100" aria-expanded="true" aria-haspopup="true">
+                    <!-- Hamburger Icon -->
+                    <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                    </svg>
+                </button>
+            </div>
+            <div id="dropdown-menu" class="hidden absolute left-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
+                <div class="py-1" role="none">
+                    <!-- 
+                        คำแนะนำ: 
+                        - ย้าย class 'font-bold bg-indigo-50 text-indigo-700' ไปใส่ใน <a> tag ของหน้าที่คุณกำลังแก้ไข
+                        - ตัวอย่างด้านล่างคือสำหรับ page2.html
+                    -->
+                    <a href="index.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" tabindex="-1" id="menu-item-0">แจ้งซ่อม</a>
+                    <a href="page2.html" class="block px-4 py-2 text-sm font-bold bg-indigo-50 text-indigo-700" role="menuitem" tabindex="-1" id="menu-item-1">รับเรื่องแจ้งซ่อม</a>
+                    <a href="page3.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" tabindex="-1" id="menu-item-2">ปิดงานแจ้งซ่อม</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- =================== จบส่วน HTML ของเมนู =================== -->
   <div class="w-full max-w-lg p-6 sm:p-8 bg-white rounded-xl shadow-md sm:shadow-lg space-y-6">
     <h1 class="text-2xl sm:text-3xl font-bold text-center text-gray-800">รับเรื่องแจ้งซ่อม</h1>
     <div id="loading" class="text-center text-gray-500"><p>กำลังโหลดข้อมูลจาก Google Sheet...</p></div>
@@ -160,5 +186,25 @@
     document.addEventListener('DOMContentLoaded', fetchData);
     repairForm.addEventListener('submit', handleFormSubmit);
   </script>
+      <!-- =================== 2. JavaScript ของเมนู (คัดลอกส่วนนี้) =================== -->
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            // --- Dropdown Menu Logic ---
+            const menuButton = document.getElementById('menu-button');
+            const dropdownMenu = document.getElementById('dropdown-menu');
+
+            menuButton.addEventListener('click', () => {
+                dropdownMenu.classList.toggle('hidden');
+            });
+
+            // Close dropdown if clicked outside
+            window.addEventListener('click', function(e) {
+                if (!menuButton.contains(e.target) && !dropdownMenu.contains(e.target)) {
+                    dropdownMenu.classList.add('hidden');
+                }
+            });
+        });
+    </script>
+    <!-- =================== จบส่วน JavaScript ของเมนู =================== -->
 </body>
 </html>
