--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             event.preventDefault();
 
             const submitButton = document.getElementById('submitButton');
-            const webhookUrl = 'https://856d-61-7-138-3.ngrok-free.app/webhook/PJF_MN';
+            const webhookUrl = 'https://856d-61-7-138-3.ngrok-free.app/webhook-test/PJF_MN';
             
             submitButton.disabled = true;
             submitButton.textContent = 'กำลังส่งข้อมูล...';
